--- a/homepage.html
+++ b/homepage.html
@@ -18,9 +18,13 @@
     <h2>Hồ Chí Minh Hướng dẫn: Làm gì? Các điểm tham quan & nhà hàng hàng đầu</h2>
     <p>Điểm đến mà tôi muốn giới thiệu hôm nay, cũng là trung tâm kinh tế của Việt Nam, đó là Thành phố Hồ Chí Minh hay còn gọi là Sài Gòn. Sài Gòn đóng vai trò then chốt trong những năm tháng đầy biến động của Chiến tranh Việt Nam và cũng là nhân chứng lịch sử cho ...</p>
 
-    <h2>Mai Châu Việt Nam | Hướng dẫn viên du lịch</h2>
+    <a href="MaiChauVN.html" style="text-decoration: none">
+        <h2 style="color: black;">Mai Châu Việt Nam | Hướng dẫn viên du lịch</h2>
+    </a>
     <p>Mai Châu là một trong những điểm đến nổi tiếng nhất ở Đông Bắc Việt Nam. Chỉ cách thủ đô Hà Nội 140km, thung lũng Mai Châu là nơi nghỉ ngơi lý tưởng vào cuối tuần để bỏ qua cái nóng oi bức của thủ đô Việt Nam. Mai Châu có độ cao 800m-900m so với mực nước biển, ...</p>
-    <img src="images/MaiChau.jpg" alt="ảnh Mai Châu">
+    <a href="MaiChauVN.html">
+        <img  src="images/MaiChau.jpg" alt="ảnh Mai Châu">
+    </a>
 
     <h2>Bản đồ Thành phố Hồ Chí Minh và các điểm tham quan không thể bỏ qua</h2>
     <p>Dưới đây là bản đồ Thành phố Hồ Chí Minh (hoặc Sài Gòn) giúp bạn khám phá thành phố phía Nam này.</p>
