Bài của Khánh (đã chỉnh sửa)

--- a/homepage.html
+++ b/homepage.html
@@ -120,7 +120,7 @@
                 <div class="nav col-n ">
                     <div class="search col-12">
                         <input type="text">
-                        <button>SEARCH</button>
+                        <button class="search-button">SEARCH</button>
                     </div>
 
                     <div class="title col-12 ">
