--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,10 @@
     <title>Du Lịch Việt Nam</title>
 </head>
 <body>
-    <img src="images/logo.png" alt="Logo">
+    <a href="homepage.html">
+        <img src="images/logo.png" alt="Logo">
+    </a>
+    
     <h2>Hướng dẫn Mũi Né: Làm gì? Các điểm tham quan hàng đầu</h2>
     <p>Geography Mui Ne is inherently the name of a cape protruding into the sea, the name of a sea cape in Phan Thiet city, Binh Thuan province, Vietnam. This is a famous tourist center of Binh Thuan province and one of the national tourist areas of Vietnam 198km from Ho...</p>
 
@@ -26,10 +29,14 @@
         <img  src="images/MaiChau.jpg" alt="ảnh Mai Châu">
     </a>
 
-    <h2>Bản đồ Thành phố Hồ Chí Minh và các điểm tham quan không thể bỏ qua</h2>
+    <a href="mapHCM.html" style="text-decoration: none;">
+        <h2 style="color: black;">Bản đồ Thành phố Hồ Chí Minh và các điểm tham quan không thể bỏ qua</h2>
+    </a>
     <p>Dưới đây là bản đồ Thành phố Hồ Chí Minh (hoặc Sài Gòn) giúp bạn khám phá thành phố phía Nam này.</p>
 
-    <h2>Bản đồ thành phố Hà Nội và các điểm tham quan không thể bỏ qua</h2>
+    <a href="mapHN.html" style="text-decoration: none;">
+        <h2 style="color: black;">Bản đồ thành phố Hà Nội và các điểm tham quan không thể bỏ qua</h2>
+    </a>
     <p>Khám phá bản đồ Hà Nội dưới đây và khám phá các điểm tham quan chính của nó</p>
 </body>
 </html>
