Chỉnh sửa lần 2

--- a/Hanoi.html
+++ b/Hanoi.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Hanoi.css">
-    <title>Du Lịch Việt Nam</title>
+    <title>Du Lịch Hà Nội</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -347,7 +347,7 @@
                         </a>
                         </li>
                         <li>
-                            <a href="# ">
+                            <a href="Hanoi.html">
                                 <p>Hanoi Guide: What to do ? Top Attractions</p>
                             </a>
                         </li>
@@ -357,7 +357,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="# ">
+                            <a href="MaiChauVN.html">
                                 <p>Mai Chau Vietnam | Travel Guide</p>
                             </a>
                         </li>
@@ -388,7 +388,7 @@
                             </li>
 
                             <li class="li_02">
-                                <a href="#">Trang của Khánh</a>
+                                <a href="Hanoi.html">Trang của Khánh</a>
 
                             </li>
 
@@ -419,10 +419,16 @@
                     <li class="li02">
                         <i class="fa-brands fa-youtube"></i>
                     </li>
+                    <div class="rightF-input">
+                        <a href="dangnhap.html">
+                            <input type="submit" value="Đăng nhập">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-        <script src="js/appHN.js"></script>
+    </div>
+    <script src="js/appHN.js"></script>
 </body>
 
 </html>
