--- a/homepage.html
+++ b/homepage.html
@@ -133,7 +133,7 @@
                         </a>
                         </li>
                         <li>
-                            <a href="# ">
+                            <a href="Hanoi.html">
                                 <p>Hanoi Guide: What to do ? Top Attractions</p>
                             </a>
                         </li>
@@ -143,8 +143,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="# ">
-                                <p>Mai Châu Vietnam | Travel Guide</p>
+                            <a href="MaiChauVN.html">
+                                <p>Mai Chau Vietnam | Travel Guide</p>
                             </a>
                         </li>
                         <li>
@@ -174,7 +174,7 @@
                             </li>
 
                             <li class="li_02 ">
-                                <a href="# ">Trang của Khánh</a>
+                                <a href="Hanoi.html">Trang của Khánh</a>
 
                             </li>
 
@@ -205,6 +205,11 @@
                     <li class="li02 ">
                         <i class="fa-brands fa-youtube "></i>
                     </li>
+                    <div class="rightF-input">
+                        <a href="dangnhap.html">
+                            <input type="submit" value="Đăng nhập">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
