--- a/Hanoi.html
+++ b/Hanoi.html
@@ -342,7 +342,7 @@
                     </div>
                     <ul class="col-12">
                         <li>
-                            <a href="# ">
+                            <a href="MuiNe.html">
                                 Mui Ne Guide: What to do ? Top Attractions
                         </a>
                         </li>
@@ -397,7 +397,7 @@
                             </li>
 
                             <li class="li_03">
-                                <a href="MaiChauVN.html">Trang của Duy</a>
+                                <a href="MuiNe.html">Trang của Duy</a>
 
                             </li>
 
