--- a/HoChiMinh.html
+++ b/HoChiMinh.html
@@ -259,14 +259,18 @@
                             <h2>Top attractions</h2>
                         </a>
                             <h2>1. Saigon Notre-Dame Basilica</h2>
-                            <img src="images/1.jpg" alt="Logo">
+                    <div class="image">
+                        <img src="images/1.jpg" alt="">
+                    </div>
                             <p>Notre Dame Cathedral has long become a symbol of this city. In the middle of a peaceful and modern place, Notre Dame Cathedral has a special nostalgic and peaceful feature.
 
                                 This work is designed in the Roman and Gothic architectural styles of Europe, so it is boldly ancient and is considered one of the 19 most beautiful basilicas in the world.
                             </p>
 
                             <h2>2. Saigon Central Post Office</h2>
-                            <img src="images/2.jpg" alt="Logo">
+                    <div class="image">
+                        <img src="images/2.jpg" alt="">
+                    </div>
                             <p>Located at 2, Paris Commune Square, District 1. This is a structure designed by architect Villedieu and erected by the Frenchs. The architecture is European style combined with Asian decoration.</p>
 
                             <h2>3. Crescent Lake – Starlight Bridge</h2>
@@ -274,7 +278,9 @@
 
                             <h2>4. Ben Thanh market</h2>
                             <p>It is the oldest market in Saigon, both ancient and modern. Ben Thanh Market is a destination not to be missed if traveling to Ho Chi Minh. Operating from 7 am to 7 pm. This market is quite famous for selling all kinds of goods for domestic and foreign tourists. Also one of the symbols of Saigon.</p>
-                            <img src="images/3.jpg" alt="Logo">
+                    <div class="image">
+                        <img src="images/3.jpg" alt="">
+                    </div>
 
                             <h2>5. The Reunification Palace</h2>
                             <p>The Reunification Palace is situated on a 15-hectare plot of land in the city’s centre. This is a one-of-a-kind architectural work that has been linked to numerous significant historical events in the country.  </p>                 
@@ -373,11 +379,18 @@
                         <a>
                             <h2>Saigon’s best markets</h2>
                             
-                            <p>1.Ben Thanh Market Quach Thi Trang Square, District 1</p>  <a href="https://www.google.com/maps/place/March%C3%A9+B%E1%BA%BFn+Th%C3%A0nh/@10.7721148,106.6960897,17z/data=!3m1!4b1!4m5!3m4!1s0x31752f3f3129e64d:0x8d6b2d79522c7f30!8m2!3d10.7721095!4d106.6982784?shorturl=1" target="_blank">See on google map</a>
-                            
-                            <p>2.Binh Tay Market 57A Thap Muoi, District 6</p> <a href="https://www.google.com/maps/place/Binh+Tay+Market/@10.749675,106.6487952,17z/data=!3m1!4b1!4m5!3m4!1s0x31752e8ab9bb054d:0x36072ab090100a11!8m2!3d10.7496697!4d106.6509839?shorturl=1" target="_blank">See on google map</a> 
-
-                            <p>3.Saigon Square Saigon Square 1, 77-89 Nam Ky Khoi Nghia, District 1 </p> <a href="https://www.google.com/maps/place/S%C3%A0i+G%C3%B2n+Square/@10.7727438,106.6980254,17z/data=!3m1!4b1!4m5!3m4!1s0x31752f40ab668353:0x41570b5c5e52852!8m2!3d10.7727385!4d106.7002141?shorturl=1" target="_blank">See on google map</a>
+                            <p>1.Ben Thanh Market Quach Thi Trang Square, District 1</p>  
+                    <div class="from">
+                        <a href="https://www.google.com/maps/place/March%C3%A9+B%E1%BA%BFn+Th%C3%A0nh/@10.7721148,106.6960897,17z/data=!3m1!4b1!4m5!3m4!1s0x31752f3f3129e64d:0x8d6b2d79522c7f30!8m2!3d10.7721095!4d106.6982784?shorturl=1" target="_blank">See on google map</a>
+                    </div>        
+                            <p>2.Binh Tay Market 57A Thap Muoi, District 6</p> 
+                    <div class="from">
+                        <a href="https://www.google.com/maps/place/Binh+Tay+Market/@10.749675,106.6487952,17z/data=!3m1!4b1!4m5!3m4!1s0x31752e8ab9bb054d:0x36072ab090100a11!8m2!3d10.7496697!4d106.6509839?shorturl=1" target="_blank">See on google map</a>
+                    </div>
+                            <p>3.Saigon Square Saigon Square 1, 77-89 Nam Ky Khoi Nghia, District 1 </p>
+                    <div class="from">
+                        <a href="https://www.google.com/maps/place/S%C3%A0i+G%C3%B2n+Square/@10.7727438,106.6980254,17z/data=!3m1!4b1!4m5!3m4!1s0x31752f40ab668353:0x41570b5c5e52852!8m2!3d10.7727385!4d106.7002141?shorturl=1" target="_blank">See on google map</a>
+                    </div>         
                         </a>
                     </div>
                     <div class="p1 txt">
@@ -435,7 +448,7 @@
                             <h3>Submit a comment</h3>
                             <p>Your email address will not be published. Required fields are marked *</p>
                         </div>
-                        <form class="form col-12">
+                        <div class="form col-12">
                             <div class="submit-text">
                                 <div class="submit-comment">
                                     <textarea placeholder=" Comment *"></textarea>
@@ -457,7 +470,7 @@
                             <div class="submit-button col-4">
                                 <input type="submit" class="btn" value="Submit">
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
                 <div class="nav col-n ">
