--- a/MuiNe.html
+++ b/MuiNe.html
@@ -458,7 +458,7 @@
                             <h2>Where to stay ?</h2>
                         </a>
                         <div class="googlemap">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54559.643957962966!2d108.28246053751492!3d10.960644155480352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31768e4c7f7c96b5%3A0x1a406b72c1020724!2zTcWpaSBOw6ksIFBoYW4gVGhp4bq_dCwgQsOsbmggVGh14bqtbiwgVmlldG5hbQ!5e0!3m2!1sfr!2sfr!4v1646334265130!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54559.643957962966!2d108.28246053751492!3d10.960644155480352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31768e4c7f7c96b5%3A0x1a406b72c1020724!2zTcWpaSBOw6ksIFBoYW4gVGhp4bq_dCwgQsOsbmggVGh14bqtbiwgVmlldG5hbQ!5e0!3m2!1sfr!2sfr!4v1646334265130!5m2!1sfr!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>>
                         </div>
                         <a href="">
                             <h2>City map</h2>
@@ -474,7 +474,7 @@
                             <h3>Submit a comment</h3>
                             <p>Your email address will not be published. Required fields are marked *</p>
                         </div>
-                        <form class="form col-12">
+                        <div class="form col-12">
                             <div class="submit-text">
                                 <div class="submit-comment">
                                     <textarea placeholder=" Comment *"></textarea>
@@ -496,7 +496,7 @@
                             <div class="submit-button col-4">
                                 <input type="submit" class="btn" value="Submit">
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
                 <div class="nav col-n ">
