Cập nhật lần cuối

--- a/Hanoi.html
+++ b/Hanoi.html
@@ -306,29 +306,30 @@
                             <h3>Submit a comment</h3>
                             <p>Your email address will not be published. Required fields are marked *</p>
                         </div>
-                        <form class="form col-12">
+                        <div class="form col-12" name="contact">
                             <div class="submit-text">
                                 <div class="submit-comment">
-                                    <textarea placeholder=" Comment *"></textarea>
+                                    <textarea placeholder=" Comment *" class="cmt"></textarea>
                                 </div>
                                 <div class="subit-name">
-                                    <input type="text" placeholder=" Name *">
+                                    <input type="text" placeholder=" Name *" class="nam">
                                 </div>
                                 <div class="subit-email">
-                                    <input type="email" placeholder=" Email *">
+                                    <input type="email" placeholder=" Email *" class="email">
                                 </div>
                                 <div class="submit-website">
-                                    <input type="text" placeholder=" Website *">
+                                    <input type="text" placeholder=" Website *" class="website">
                                 </div>
                             </div>
                             <div class="submit-checkbox">
                                 <input type="checkbox" id="checkbox" name="remember-my-name" value="remember">
                                 <label for="remember-my-name">Save my name, email, and website in this browser for the next time I comment.</label><br>
                             </div>
-                            <div class="submit-button col-4">
-                                <input type="submit" class="btn" value="Submit">
-                            </div>
-                        </form>
+
+                        </div>
+                        <div class="submit-button col-4">
+                            <button class="btn">sub</button>
+                        </div>
                     </div>
                 </div>
                 <div class="nav col-n ">
@@ -352,12 +353,12 @@
                             </a>
                         </li>
                         <li>
-                            <a href="# ">
+                            <a href="HoChiMinh.html">
                                 <p>Ho Chi Minh City Guide: What to do ? Top Attractions & Restaurants</p>
                             </a>
                         </li>
                         <li>
-                            <a href="MaiChauVN.html">
+                            <a href="#">
                                 <p>Mai Chau Vietnam | Travel Guide</p>
                             </a>
                         </li>
@@ -406,7 +407,7 @@
                             </li>
 
                             <li class="li_04">
-                                <a href="#">Trang của Hoàng</a>
+                                <a href="HoChiMinh.html">Trang của Hoàng</a>
 
                             </li>
                         </ul>
@@ -427,6 +428,7 @@
                 </div>
             </div>
         </div>
+
     </div>
     <script src="js/appHN.js"></script>
 </body>
