--- a/dangnhap.html
+++ b/dangnhap.html
@@ -26,16 +26,21 @@
             <h1 class="form-header">Đăng nhập</h1>
             <div class="form-inner">
                 <i class="fa-regular fa-user"></i>
-                <input type="text" class="form-input" placeholder="Tên đăng nhập">
+                <input type="text" class="form-input-acc" placeholder="Tên đăng nhập">
             </div>
             <div class="form-inner">
                 <i class="fa-solid fa-lock"></i>
-                <input type="password" class="form-input" placeholder="Mật khẩu">
+                <input type="password" class="form-input-pwd" placeholder="Mật khẩu">
                 <div id="eye">
                     <i class="fa-solid fa-eye"></i>
                 </div>
             </div>
-            <input type="submit" value="Đăng nhập" class="form-submit">
+            <div class="button">
+                <a href="thongtin-1.html">
+                    <input type="submit" value="Đăng nhập" class="form-submit">
+                </a>
+            </div>
+
         </form>
     </div>
 
@@ -57,7 +62,7 @@
                         </li>
 
                         <li class="li_02 ">
-                            <a href="# ">Trang của Khánh</a>
+                            <a href="Hanoi.html">Trang của Khánh</a>
 
                         </li>
 
@@ -66,7 +71,7 @@
                         </li>
 
                         <li class="li_03 ">
-                            <a href="MaiChauVN.html ">Trang của Duy</a>
+                            <a href="MuiNe.html">Trang của Duy</a>
 
                         </li>
 
@@ -75,7 +80,7 @@
                         </li>
 
                         <li class="li_04 ">
-                            <a href="# ">Trang của Hoàng</a>
+                            <a href="HoChiMinh.html">Trang của Hoàng</a>
 
                         </li>
                     </ul>
