--- a/homepage.html
+++ b/homepage.html
@@ -47,7 +47,7 @@
                 <div class="content col-9">
                     <!-- Đoạn văn 1 -->
                     <div class="p1">
-                        <a href="#">
+                        <a href="MuiNe.html">
                             <h2>Mui Ne Guide: What to do ? Top Attractions</h2>
                         </a>
                         <p>Geography Mui Ne is inherently the name of a cape protruding into the sea, the name of a sea cape in Phan Thiet city, Binh Thuan province, Vietnam. This is a famous tourist center of Binh Thuan province and one of the national
@@ -58,7 +58,7 @@
                     </div>
                     <!-- Đoạn văn 2 -->
                     <div class="p1">
-                        <a href="#">
+                        <a href="Hanoi.html">
                             <h2>Hanoi Guide: What to do ? Top Attractions</h2>
                         </a>
                         <p>Geography Located in the north of Viet Nam, Hanoi is a beautiful city that cannot be missed out from the journey along this beautiful country. Yet, how to explore this capital city of Vietnam might challenge you as a first-time
@@ -69,7 +69,7 @@
                     </div>
                     <!-- Đoạn văn 3 -->
                     <div class="p1">
-                        <a href="#">
+                        <a href="HoChiMinh.html">
                             <h2>Ho Chi Minh City Guide: What to do ? Top Attractions & Restaurants</h2>
                         </a>
                         <p>The destination that I would like to introduce today, which is also Vietnam’s economic center, is Ho Chi Minh City, also known as Saigon. Saigon played a pivotal role during the tumultuous years of the Vietnam War and was also
@@ -130,7 +130,7 @@
                     </div>
                     <ul class="col-12 ">
                         <li class="il ">
-                            <a href="# ">
+                            <a href="MuiNe.html">
                                 Mui Ne Guide: What to do ? Top Attractions
                         </a>
                         </li>
@@ -140,12 +140,12 @@
                             </a>
                         </li>
                         <li>
-                            <a href="# ">
+                            <a href="HoChiMinh.html">
                                 <p>Ho Chi Minh City Guide: What to do ? Top Attractions & Restaurants</p>
                             </a>
                         </li>
                         <li>
-                            <a href="MaiChauVN.html">
+                            <a href="#">
                                 <p>Mai Chau Vietnam | Travel Guide</p>
                             </a>
                         </li>
@@ -185,7 +185,7 @@
                             </li>
 
                             <li class="li_03 ">
-                                <a href="MaiChauVN.html ">Trang của Duy</a>
+                                <a href="MuiNe.html">Trang của Duy</a>
 
                             </li>
 
@@ -194,7 +194,7 @@
                             </li>
 
                             <li class="li_04 ">
-                                <a href="# ">Trang của Hoàng</a>
+                                <a href="HoChiMinh.html">Trang của Hoàng</a>
 
                             </li>
                         </ul>
